--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p class="informacoes-modelo">Cores e Fontes personalizadas</p>
         </div>
         <span class="valor">R$ 250</span>
-        <a href="" class="btn-whats">Comprar</a>
+        <a href="" class="btn-whats">Solicitar Convite</a>
       </li>
       <li id="item-1"><img src="img/modelo2.png">
         <div class="container-conteudo-modelos">
@@ -52,7 +52,7 @@
           <p class="informacoes-modelo">Galeria de fotos(slide) do casal</p>
         </div>
         <span class="valor">R$ 500</span>
-        <a href="" class="btn-whats">Comprar</a>
+        <a href="" class="btn-whats">Solicitar Convite</a>
       </li>
       <li id="item-1"><img src="img/modelo3.png">
         <div class="container-conteudo-modelos">
@@ -63,7 +63,7 @@
           <p class="informacoes-modelo">Agenda para os convidados do dia do casamento</p>
         </div>
         <span class="valor">R$ 750</span>
-        <a href="" class="btn-whats">Comprar</a>
+        <a href="" class="btn-whats">Solicitar Convite</a>
       </li>
     </ul>
   </section>
@@ -73,7 +73,7 @@
     <div class="depoimento">
       <img src="img/depoimento1.jpg">
       <img src="img/depoimento2.jpg">
-      <img src="img/depoimento1.jpg">
+      <img src="img/depoimento3.jpg">
     </div>
   </section>
   <!--   <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p> -->
@@ -81,7 +81,28 @@
     <img src="img/conta-te.jpg">
   </section> -->
 
-  <div class="contato-bg grid-2-cl container" id="contato">
+  <section class="faq_container container">
+    <p class="detalhe">PERGUNTAS</p>
+    <h2 class="">FREQUENTES </h2>
+    <div class="faq">
+      <h3 class="pergunta">Como faço para solicitar um convite personalizado?</h3>
+      <p class="resposta">Ao encontrar o pacote que lhe agrada, clique em "Solicitar Convite". Depois disso, você será direcionado para o WhatsApp, onde nossa equipe de desenvolvimento estará pronta para capturar suas ideias e criar um convite perfeito para você.</p>
+    </div>
+    <div class="faq">
+      <h3 class="pergunta">Quanto tempo leva para receber o convite digital?</h3>
+      <p class="resposta">O tempo de entrega varia de acordo com o pacote escolhido e a complexidade da personalização. Geralmente, os convites digitais são entregues dentro de 1 a 2 semanas após a confirmação do design.</p>
+    </div>
+    <div class="faq ">
+      <h3 class="pergunta ativo">Como funciona a lista de presentes?</h3>
+      <p class="resposta ">A lista de presentes é feita em parceria com a Magazine Luiza. Cada presente escolhido pelos convidados gera um crédito equivalente, que o casal pode usar para selecionar os itens que desejam na loja. Isso dá ao casal flexibilidade para trocar os créditos pelos presentes mais importantes para eles, tornando a celebração ainda mais especial.</p>
+    </div>
+    <div class="faq">
+      <h3 class="pergunta ativo">Qual é a diferença entre convites de casamento digitais e impressos?</h3>
+      <p class="resposta">Os convites de casamento digitais oferecem a vantagem da praticidade e personalização. Enquanto os convites impressos são físicos, os digitais podem ser enviados rapidamente por e-mail ou mensagem, economizando tempo e recursos.</p>
+    </div>
+
+  </section>
+  <section class="contato-bg grid-2-cl container" id="contato">
     <div class="contato">
       <div class="link">
         <p class="detalhe">NOSSO</p>
@@ -99,8 +120,9 @@
     <div class="img">
       <img src="img/formulario.jpg" alt="Desenvolvendo um site" width="560" height="858">
     </div>
-  </div>
-
+  </section>
+  <script src="script.js"></script>
 </body>
+
 
 </html>
