--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p class="informacoes-modelo">Cores e Fontes personalizadas</p>
         </div>
         <span class="valor">R$ 250</span>
-        <a href="" class="btn-whats">Solicitar Convite</a>
+        <a href='https://api.whatsapp.com/send/?phone=5551989582143&text=Ol%C3%A1,+gostaria+de+solicitar+o+pacote+"casamento essencial!"&type=phone_number&app_absent=0' class="btn-whats" target="_blank">Solicitar Convite</a>
       </li>
       <li id="item-1"><img src="img/modelo2.png">
         <div class="container-conteudo-modelos">
@@ -52,7 +52,7 @@
           <p class="informacoes-modelo">Galeria de fotos(slide) do casal</p>
         </div>
         <span class="valor">R$ 500</span>
-        <a href="" class="btn-whats">Solicitar Convite</a>
+        <a href=' https://api.whatsapp.com/send/?phone=5551989582143&text=Ol%C3%A1,+gostaria+de+solicitar+o+pacote+"união perfeita"!&type=phone_number&app_absent=0' class="btn-whats" target="_blank">Solicitar Convite</a>
       </li>
       <li id="item-1"><img src="img/modelo3.png">
         <div class="container-conteudo-modelos">
@@ -63,7 +63,7 @@
           <p class="informacoes-modelo">Agenda para os convidados do dia do casamento</p>
         </div>
         <span class="valor">R$ 750</span>
-        <a href="" class="btn-whats">Solicitar Convite</a>
+        <a href="https://api.whatsapp.com/send/?phone=5551989582143&text=Ol%C3%A1,+gostaria+de+solicitar+o+pacote+casamento dos sonhos!&type=phone_number&app_absent=0" target="_blank" class="btn-whats">Solicitar Convite</a>
       </li>
     </ul>
   </section>
@@ -107,7 +107,9 @@
       <div class="link">
         <p class="detalhe">NOSSO</p>
         <h2 class="">CONTATO</h2>
-        <a href="mailto:contato@nicolasbueno.com.br" class="color-0 font-2-l" target=" _blank ">convitecasamentos.com.br<img src="img/email.svg" id="email-img" width="48" height="48"></a>
+        <a href="mailto:contato@nicolasbueno.com.br"  target="_blank ">convitecasamentos.com.br<img src="img/email.svg" id="email-img" width="48" height="48"></a>
+        <a href="https://api.whatsapp.com/send/?phone=5551989582143&text=Ol%C3%A1,+gostaria+de+saber+mais+sobre+os+convites!!&type=phone_number&app_absent=0" id="tel" target="_blank ">51 989582143<img src="img/whats.svg" id="email-img" width="48" height="48"></a>
+        <a href="https://www.instagram.com/convitecasamentos"  target="_blank ">@convitecasamentos<img src="img/insta.svg" id="email-img" width="48" height="48"></a>
       </div>
       <form action="./enviar.php" method="post">
         <input type="text" placeholder="Seu nome" name="nome" required="">
