--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
       <img src="img/depoimento3.jpg" data-aos="flip-left">
     </div>
   </section>
-  <!--   <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p> -->
-  <!--   <section class="container contate-nos">
+  <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p>
+  <section class="container contate-nos">
     <img src="img/conta-te.jpg">
-  </section> -->
+  </section>
 
   <section class="faq_container container" data-aos="fade-up">
     <p class="detalhe">PERGUNTAS</p>
