--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
       <img src="img/depoimento3.jpg" data-aos="flip-left">
     </div>
   </section>
-  <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p>
+<!--   <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p>
   <section class="container contate-nos">
     <img src="img/conta-te.jpg">
-  </section>
+  </section> -->
 
   <section class="faq_container container" data-aos="fade-up">
     <p class="detalhe">PERGUNTAS</p>
@@ -128,6 +128,9 @@
       <img src="img/formulario.jpg" alt="Desenvolvendo um site" width="560" height="858">
     </div>
   </section>
+  <footer>
+    <p>N & B convites digitais © todos os direitos reservados.</p>
+  </footer>
   <script src="script.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
