--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </li>
     </ul>
   </section>
-  <section class="container">
+  <section class="container pt_pb">
     <p class="detalhe">ALGUNS</p>
     <h2 class="">DEPOIMENTOS</h2>
     <div class="depoimento">
@@ -81,33 +81,33 @@
       <img src="img/depoimento3.jpg" data-aos="flip-left">
     </div>
   </section>
-<!--   <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p>
+  <!--   <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p>
   <section class="container contate-nos">
     <img src="img/conta-te.jpg">
   </section> -->
 
-  <section class="faq_container container" data-aos="fade-up">
+  <section class="faq_container container pt_pb" data-aos="fade-up">
     <p class="detalhe">PERGUNTAS</p>
     <h2 class="">FREQUENTES </h2>
     <div class="faq">
-      <h3 class="pergunta">Como faço para solicitar um convite personalizado?</h3>
+      <h3 class="pergunta ativo">Como faço para solicitar um convite personalizado?</h3>
       <p class="resposta">Ao encontrar o pacote que lhe agrada, clique em "Solicitar Convite". Depois disso, você será direcionado para o WhatsApp, onde nossa equipe de desenvolvimento estará pronta para capturar suas ideias e criar um convite perfeito para você.</p>
     </div>
     <div class="faq">
-      <h3 class="pergunta">Quanto tempo leva para receber o convite digital?</h3>
+      <h3 class="pergunta ativo">Quanto tempo leva para receber o convite digital?</h3>
       <p class="resposta">O tempo de entrega varia de acordo com o pacote escolhido e a complexidade da personalização. Geralmente, os convites digitais são entregues dentro de 1 a 2 semanas após a confirmação do design.</p>
     </div>
     <div class="faq ">
-      <h3 class="pergunta ativo">Como funciona a lista de presentes?</h3>
+      <h3 class="pergunta">Como funciona a lista de presentes?</h3>
       <p class="resposta ">A lista de presentes é feita em parceria com a Magazine Luiza. Cada presente escolhido pelos convidados gera um crédito equivalente, que o casal pode usar para selecionar os itens que desejam na loja. Isso dá ao casal flexibilidade para trocar os créditos pelos presentes mais importantes para eles, tornando a celebração ainda mais especial.</p>
     </div>
     <div class="faq">
-      <h3 class="pergunta ativo ">Qual é a diferença entre convites de casamento digitais e impressos?</h3>
+      <h3 class="pergunta">Qual é a diferença entre convites de casamento digitais e impressos?</h3>
       <p class="resposta">Os convites de casamento digitais oferecem a vantagem da praticidade e personalização. Enquanto os convites impressos são físicos, os digitais podem ser enviados rapidamente por e-mail ou mensagem, economizando tempo e recursos.</p>
     </div>
 
   </section>
-  <section class="contato-bg grid-2-cl container" id="contato" data-aos="fade-up">
+  <section class=" grid-2-cl container pt_pb" id="contato" data-aos="fade-up">
     <div class="contato">
       <div class="link">
         <p class="detalhe">NOSSO</p>
@@ -116,6 +116,7 @@
         <a href="https://api.whatsapp.com/send/?phone=5551989582143&text=Ol%C3%A1,+gostaria+de+saber+mais+sobre+os+convites!!&type=phone_number&app_absent=0" id="tel" target="_blank ">51 989582143<img src="img/whats.svg" id="email-img" width="48" height="48"></a>
         <a href="https://www.instagram.com/convitecasamentos" target="_blank ">@convitecasamentos<img src="img/insta.svg" id="email-img" width="48" height="48"></a>
       </div>
+      <p class="desejar">Se desejar enviar-nos uma mensagem,<br>ficaremos felizes em ouvir você:</p>
       <form action="./enviar.php" method="post">
         <input type="text" placeholder="Seu nome" name="nome" required="">
         <input type="email" placeholder="Seu email" name="email" required="">
