--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./style/style.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>N & B - convites para casamento</title>
+  <meta property="og:image" content="https://raw.githubusercontent.com/NicolasBuen0/nb-convites/main/img/casal.jpg">
 </head>
 
 <body>
@@ -81,10 +82,7 @@
       <img src="img/depoimento3.jpg" data-aos="flip-left">
     </div>
   </section>
-  <!--   <p class="texto lema">💕Cada convite digital que criamos é mais do que pixels na tela, é um fragmento da história do casal💕</p>
-  <section class="container contate-nos">
-    <img src="img/conta-te.jpg">
-  </section> -->
+
 
   <section class="faq_container container pt_pb" data-aos="fade-up">
     <p class="detalhe">PERGUNTAS</p>
