--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>N & B - convites para casamento</title>
   <meta property="og:image" content="https://raw.githubusercontent.com/NicolasBuen0/nb-convites/main/img/casal.jpg">
+  <meta property="og:title" content="Convites Digitais">
+  <meta property="og:description" content="Transforme o seu convite de casamento em uma experiência memorável com o nosso serviço de convites de casamento digitais personalizados. ">
+
+
 </head>
 
 <body>
